frontend/ArArduinoParser.py
# Generated from ArArduinoParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArArduinoParser ( Parser ):

    grammarFileName = "ArArduinoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u0645\\u062A\\u063A\\u064A\\u0631'", 
                     "<INVALID>", "'\\u0648\\u0627\\u0644\\u0627'", "'\\u0637\\u0627\\u0644\\u0645\\u0627'", 
                     "'\\u0635\\u062D'", "'\\u063A\\u0644\\u0637'", "<INVALID>", 
                     "<INVALID>", "'\\u0641\\u0627\\u0631\\u063A'", "<INVALID>", 
                     "'\\u0627\\u0631\\u062C\\u0639'", "'\\u0627\\u0639\\u062F\\u0627\\u062F'", 
                     "<INVALID>", "'\\u0645\\u0646\\u0637\\u0642\\u064A'", 
                     "'\\u0627\\u0642\\u0637\\u0639'", "'\\u062A\\u062C\\u0627\\u0648\\u0632'", 
                     "'\\u0646\\u0641\\u0630'", "'\\u0627\\u0643\\u062A\\u0628'", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'++'", "'--'", 
                     "'+='", "'-='", "'%'", "'<<'", "'>>'", "'>='", "'<='", 
                     "'=='", "'!='", "'>'", "'<'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "':'", "'\\u061B'", 
                     "'\\u060C'", "'|'", "'&'", "'^'", "'~'", "'\\u0646\\u0635'", 
                     "'\\u062D\\u0631\\u0641'" ]

    symbolicNames = [ "<INVALID>", "VAR", "IF", "ELSE", "WHILE", "TRUE", 
                      "FALSE", "INT_T", "FLOAT_T", "VOID", "FUNCTION", "RETURN", 
                      "SETUP", "LOOP", "BOOL", "BREAK", "CONTINUE", "DO", 
                      "PRINT", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", 
                      "INC", "DEC", "ADD_ASSIGN", "SUB_ASSIGN", "MOD", "SHL", 
                      "SHR", "GTE", "LTE", "EQ", "NEQ", "GT", "LT", "OR", 
                      "AND", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "COLON", "SEMI", "COMA", "BW_OR", "BW_AND", "BW_XOR", 
                      "BW_NOT", "STRING_T", "CHAR_T", "STRING", "CHAR", 
                      "IMPORT", "BIN_NUMBER", "NUMBER", "ID", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_importStmt = 1
    RULE_declaration = 2
    RULE_varDecl = 3
    RULE_funDecl = 4
    RULE_funcBody = 5
    RULE_params = 6
    RULE_param = 7
    RULE_block = 8
    RULE_statement = 9
    RULE_idStatement = 10
    RULE_idSuffix = 11
    RULE_ifStat = 12
    RULE_whileStat = 13
    RULE_breakStat = 14
    RULE_continueStat = 15
    RULE_returnStat = 16
    RULE_args = 17
    RULE_expression = 18
    RULE_orExpr = 19
    RULE_andExpr = 20
    RULE_bwOrExpr = 21
    RULE_bwXorExpr = 22
    RULE_bwAndExpr = 23
    RULE_relExpr = 24
    RULE_relOp = 25
    RULE_shiftExpr = 26
    RULE_addExpr = 27
    RULE_mulExpr = 28
    RULE_unaryExpr = 29
    RULE_primary = 30
    RULE_primaryIdSuffix = 31
    RULE_type = 32

    ruleNames =  [ "program", "importStmt", "declaration", "varDecl", "funDecl", 
                   "funcBody", "params", "param", "block", "statement", 
                   "idStatement", "idSuffix", "ifStat", "whileStat", "breakStat", 
                   "continueStat", "returnStat", "args", "expression", "orExpr", 
                   "andExpr", "bwOrExpr", "bwXorExpr", "bwAndExpr", "relExpr", 
                   "relOp", "shiftExpr", "addExpr", "mulExpr", "unaryExpr", 
                   "primary", "primaryIdSuffix", "type" ]

    EOF = Token.EOF
    VAR=1
    IF=2
    ELSE=3
    WHILE=4
    TRUE=5
    FALSE=6
    INT_T=7
    FLOAT_T=8
    VOID=9
    FUNCTION=10
    RETURN=11
    SETUP=12
    LOOP=13
    BOOL=14
    BREAK=15
    CONTINUE=16
    DO=17
    PRINT=18
    ASSIGN=19
    PLUS=20
    MINUS=21
    MUL=22
    DIV=23
    INC=24
    DEC=25
    ADD_ASSIGN=26
    SUB_ASSIGN=27
    MOD=28
    SHL=29
    SHR=30
    GTE=31
    LTE=32
    EQ=33
    NEQ=34
    GT=35
    LT=36
    OR=37
    AND=38
    NOT=39
    LPAREN=40
    RPAREN=41
    LBRACE=42
    RBRACE=43
    COLON=44
    SEMI=45
    COMA=46
    BW_OR=47
    BW_AND=48
    BW_XOR=49
    BW_NOT=50
    STRING_T=51
    CHAR_T=52
    STRING=53
    CHAR=54
    IMPORT=55
    BIN_NUMBER=56
    NUMBER=57
    ID=58
    WS=59
    LINE_COMMENT=60
    BLOCK_COMMENT=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ArArduinoParser.EOF, 0)

        def importStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.ImportStmtContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.ImportStmtContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ArArduinoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==55:
                self.state = 66
                self.importStmt()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==10:
                self.state = 72
                self.declaration()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(ArArduinoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(ArArduinoParser.IMPORT, 0)

        def STRING(self):
            return self.getToken(ArArduinoParser.STRING, 0)

        def SEMI(self):
            return self.getToken(ArArduinoParser.SEMI, 0)

        def getRuleIndex(self):
            return ArArduinoParser.RULE_importStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStmt" ):
                listener.enterImportStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStmt" ):
                listener.exitImportStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStmt" ):
                return visitor.visitImportStmt(self)
            else:
                return visitor.visitChildren(self)




    def importStmt(self):

        localctx = ArArduinoParser.ImportStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ArArduinoParser.IMPORT)
            self.state = 81
            self.match(ArArduinoParser.STRING)
            self.state = 82
            self.match(ArArduinoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(ArArduinoParser.VarDeclContext,0)


        def funDecl(self):
            return self.getTypedRuleContext(ArArduinoParser.FunDeclContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ArArduinoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.varDecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.funDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ArArduinoParser.VAR, 0)

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def COLON(self):
            return self.getToken(ArArduinoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(ArArduinoParser.TypeContext,0)


        def ASSIGN(self):
            return self.getToken(ArArduinoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ArArduinoParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(ArArduinoParser.SEMI, 0)

        def getRuleIndex(self):
            return ArArduinoParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ArArduinoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(ArArduinoParser.VAR)
            self.state = 89
            self.match(ArArduinoParser.ID)
            self.state = 90
            self.match(ArArduinoParser.COLON)
            self.state = 91
            self.type_()
            self.state = 92
            self.match(ArArduinoParser.ASSIGN)
            self.state = 93
            self.expression()
            self.state = 94
            self.match(ArArduinoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ArArduinoParser.FUNCTION, 0)

        def funcBody(self):
            return self.getTypedRuleContext(ArArduinoParser.FuncBodyContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_funDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDecl" ):
                listener.enterFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDecl" ):
                listener.exitFunDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDecl" ):
                return visitor.visitFunDecl(self)
            else:
                return visitor.visitChildren(self)




    def funDecl(self):

        localctx = ArArduinoParser.FunDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(ArArduinoParser.FUNCTION)
            self.state = 97
            self.funcBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SETUP(self):
            return self.getToken(ArArduinoParser.SETUP, 0)

        def LPAREN(self):
            return self.getToken(ArArduinoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ArArduinoParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(ArArduinoParser.COLON, 0)

        def VOID(self):
            return self.getToken(ArArduinoParser.VOID, 0)

        def block(self):
            return self.getTypedRuleContext(ArArduinoParser.BlockContext,0)


        def LOOP(self):
            return self.getToken(ArArduinoParser.LOOP, 0)

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(ArArduinoParser.TypeContext,0)


        def params(self):
            return self.getTypedRuleContext(ArArduinoParser.ParamsContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBody" ):
                return visitor.visitFuncBody(self)
            else:
                return visitor.visitChildren(self)




    def funcBody(self):

        localctx = ArArduinoParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcBody)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(ArArduinoParser.SETUP)
                self.state = 100
                self.match(ArArduinoParser.LPAREN)
                self.state = 101
                self.match(ArArduinoParser.RPAREN)
                self.state = 102
                self.match(ArArduinoParser.COLON)
                self.state = 103
                self.match(ArArduinoParser.VOID)
                self.state = 104
                self.block()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(ArArduinoParser.LOOP)
                self.state = 106
                self.match(ArArduinoParser.LPAREN)
                self.state = 107
                self.match(ArArduinoParser.RPAREN)
                self.state = 108
                self.match(ArArduinoParser.COLON)
                self.state = 109
                self.match(ArArduinoParser.VOID)
                self.state = 110
                self.block()
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.match(ArArduinoParser.ID)
                self.state = 112
                self.match(ArArduinoParser.LPAREN)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==58:
                    self.state = 113
                    self.params()


                self.state = 116
                self.match(ArArduinoParser.RPAREN)
                self.state = 117
                self.match(ArArduinoParser.COLON)
                self.state = 118
                self.type_()
                self.state = 119
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.ParamContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.ParamContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ArArduinoParser.COMA)
            else:
                return self.getToken(ArArduinoParser.COMA, i)

        def getRuleIndex(self):
            return ArArduinoParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = ArArduinoParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.param()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 124
                self.match(ArArduinoParser.COMA)
                self.state = 125
                self.param()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def COLON(self):
            return self.getToken(ArArduinoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(ArArduinoParser.TypeContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ArArduinoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(ArArduinoParser.ID)
            self.state = 132
            self.match(ArArduinoParser.COLON)
            self.state = 133
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ArArduinoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ArArduinoParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArArduinoParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArArduinoParser.StatementContext,i)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ArArduinoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(ArArduinoParser.LBRACE)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 288269958570412054) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(ArArduinoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(ArArduinoParser.VarDeclContext,0)


        def idStatement(self):
            return self.getTypedRuleContext(ArArduinoParser.IdStatementContext,0)


        def SEMI(self):
            return self.getToken(ArArduinoParser.SEMI, 0)

        def ifStat(self):
            return self.getTypedRuleContext(ArArduinoParser.IfStatContext,0)


        def whileStat(self):
            return self.getTypedRuleContext(ArArduinoParser.WhileStatContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(ArArduinoParser.ReturnStatContext,0)


        def breakStat(self):
            return self.getTypedRuleContext(ArArduinoParser.BreakStatContext,0)


        def continueStat(self):
            return self.getTypedRuleContext(ArArduinoParser.ContinueStatContext,0)


        def block(self):
            return self.getTypedRuleContext(ArArduinoParser.BlockContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ArArduinoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.varDecl()
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.idStatement()
                self.state = 146
                self.match(ArArduinoParser.SEMI)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.ifStat()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.whileStat()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 150
                self.returnStat()
                self.state = 151
                self.match(ArArduinoParser.SEMI)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 6)
                self.state = 153
                self.breakStat()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 154
                self.continueStat()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 8)
                self.state = 155
                self.block()
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 9)
                self.state = 156
                self.match(ArArduinoParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArArduinoParser.ID, 0)

        def idSuffix(self):
            return self.getTypedRuleContext(ArArduinoParser.IdSuffixContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_idStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdStatement" ):
                listener.enterIdStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdStatement" ):
                listener.exitIdStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdStatement" ):
                return visitor.visitIdStatement(self)
            else:
                return visitor.visitChildren(self)




    def idStatement(self):

        localctx = ArArduinoParser.IdStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(ArArduinoParser.ID)
            self.state = 160
            self.idSuffix()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdSuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(ArArduinoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ArArduinoParser.ExpressionContext,0)


        def ADD_ASSIGN(self):
            return self.getToken(ArArduinoParser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(ArArduinoParser.SUB_ASSIGN, 0)

        def INC(self):
            return self.getToken(ArArduinoParser.INC, 0)

        def DEC(self):
            return self.getToken(ArArduinoParser.DEC, 0)

        def LPAREN(self):
            return self.getToken(ArArduinoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ArArduinoParser.RPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(ArArduinoParser.ArgsContext,0)


        def getRuleIndex(self):
            return ArArduinoParser.RULE_idSuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdSuffix" ):
                listener.enterIdSuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdSuffix" ):
                listener.exitIdSuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdSuffix" ):
                return visitor.visitIdSuffix(self)
            else:
                return visitor.visitChildren(self)




    def idSuffix(self):
